# i3blocks_cpu

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build_and_test.yml  release.yml  rust.yml
src/: main.rs
