[package]
name = "cpu"
version = "1.0.0"
authors = ["Michael Sasser <Michael@MichaelSasser.org>"]
edition = "2018"
description = "Show the cpu status in i3blocks"
repository = "https://github.com/MichaelSasser/i3blocks_cpu/"
license = "GPL-3.0-or-later"
keywords = ["cpu", "sway", "swaybar", "i3bar", "i3"]
categories = ["visualization"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
