[package]
name = "i3blocks_cpu"
version = "1.0.0"
authors = ["Michael Sasser <Michael@MichaelSasser.org>"]
edition = "2021"
description = "Show the cpu status in i3blocks"
repository = "https://github.com/MichaelSasser/i3blocks_cpu/"
license = "MIT"
keywords = ["cpu", "sway", "swaybar", "i3bar", "i3"]
categories = ["visualization"]
publish = false

[badges]
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "time",
  "fs",
  "io-util",
] }

[profile.release]
strip = "symbols"
panic="abort"
lto = "fat"
opt-level = 3
codegen-units = 1
incremental = false
